[package]
name = "spargebra"
version = "0.4.0-beta.3"
authors.workspace = true
license.workspace = true
readme = "README.md"
keywords = ["SPARQL"]
repository = "https://github.com/oxigraph/oxigraph/tree/main/lib/spargebra"
documentation = "https://docs.rs/spargebra"
description = "SPARQL parser"
edition.workspace = true
rust-version.workspace = true

[features]
default = []
sparql-12 = ["oxrdf/rdf-12"]
sep-0002 = []
sep-0006 = []

[dependencies]
oxilangtag.workspace = true
oxiri.workspace = true
oxrdf.workspace = true
peg.workspace = true
rand.workspace = true
thiserror.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
